--- a/clusters/cluster/git-repo.yaml
+++ b/clusters/cluster/git-repo.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  url: https://github.com/Himanshu-216/go-app
+  url: https://github.com/Himanshu-216/goapp
   ref:
     branch: master
