--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -16,7 +16,8 @@ spec:
     replicaCount: 2
     image:
       repository: himanshu162pnt723/goapp
-      tag: "20250908160902"       
+      tag: "20250908160902" # {"$imagepolicy": "flux-system:goapp"}
     service:
       type: NodePort
       port: 8080
+
