--- a/clusters/cluster/imagepolicy.yaml
+++ b/clusters/cluster/imagepolicy.yaml
@@ -7,5 +7,5 @@ spec:
   imageRepositoryRef:
     name: goapp
   policy:
-    semver:
-      range: ">=0.0.0"
+    alphabetical:
+      order: asc  # or "desc" for newest
