checking tag picker

--- a/clusters/cluster/imagepolicy.yaml
+++ b/clusters/cluster/imagepolicy.yaml
@@ -8,4 +8,4 @@ spec:
     name: goapp
   policy:
     alphabetical:
-      order: asc  # or "desc" for newest
+      order: desc  # or "desc" for newest
