--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -16,7 +16,7 @@ spec:
     replicaCount: 2
     image:
       repository: himanshu162pnt723/goapp
-      tag: "himanshu162pnt723/goapp:latest" # {"$imagepolicy": "flux-system:goapp"}
+      tag: "latest" # {"$imagepolicy": "flux-system:goapp"}
     service:
       type: NodePort
       port: 8080
