--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -6,7 +6,13 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: NodePort
+  type: ClusterIP   # <--- changed from NodePort
   port: 8080
+  targetPort: 8080
+
+ingress:
+  enabled: true
+  host: goapp.local
+
 
 resources: {}
