--- a/clusters/cluster/kustomization.yaml
+++ b/clusters/cluster/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - imagerepository.yaml
   - imagepolicy.yaml
   - imageupdateautomation.yaml
+  - helm-repos.yaml
+  - ingress-nginx.yaml
+  
