--- a/clusters/cluster/ingress-nginx.yaml
+++ b/clusters/cluster/ingress-nginx.yaml
@@ -1,19 +1,28 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: ingress-nginx
   namespace: ingress-nginx
 spec:
-  interval: 10m
+  releaseName: ingress-nginx
   chart:
     spec:
       chart: ingress-nginx
-      version: "4.13.3" # choose stable version
+      version: 4.11.1
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
         namespace: flux-system
+  interval: 30m
   values:
     controller:
+      hostNetwork: true              # <-- binds pods directly to host ports 80/443
+      dnsPolicy: ClusterFirstWithHostNet
+      ingressClassByName: true
+      config:
+        http2: true
+        http2-push: "on"
+        http2-push-preload: "on"
       service:
-        type: LoadBalancer
+        type: ClusterIP              # service doesn’t need LoadBalancer or NodePort
+        externalTrafficPolicy: Local
