--- a/clusters/cluster/ingress-nginx.yaml
+++ b/clusters/cluster/ingress-nginx.yaml
@@ -1,28 +1,27 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: ingress-nginx
   namespace: ingress-nginx
 spec:
-  releaseName: ingress-nginx
+  interval: 10m
   chart:
     spec:
       chart: ingress-nginx
-      version: 4.11.1
+      version: "4.13.3"
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
         namespace: flux-system
-  interval: 30m
   values:
     controller:
-      hostNetwork: true              # <-- binds pods directly to host ports 80/443
-      dnsPolicy: ClusterFirstWithHostNet
-      ingressClassByName: true
+      hostNetwork: true                     # Bind pods directly to host network
+      dnsPolicy: ClusterFirstWithHostNet    # Required for hostNetwork pods
+      ingressClassByName: true              # Ensure ingressClassName works
       config:
         http2: true
         http2-push: "on"
         http2-push-preload: "on"
       service:
-        type: ClusterIP              # service doesn’t need LoadBalancer or NodePort
+        type: ClusterIP                     # No LoadBalancer needed
         externalTrafficPolicy: Local
