--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -17,9 +17,6 @@ spec:
     image:
       repository: himanshu162pnt723/goapp
       tag: "20251004014812" # {"$imagepolicy": "flux-system:goapp:tag"}
-    service:
-      type: ClusterIP # <-- changed from NodePort
-      port: 8080
-    ingress:
-      enabled: true
-      host: goapp.local # <-- change to your domain or test host
+    # service:
+    #   type: ClusterIP # <-- changed from NodePort
+    #   port: 8080
