--- a/clusters/cluster/imageupdateautomation.yaml
+++ b/clusters/cluster/imageupdateautomation.yaml
@@ -21,4 +21,20 @@ spec:
         name: fluxcdbot
         email: flux@example.com
       messageTemplate: |
-        will test later
+        Automated image update
+      
+        Automation name: {{ .AutomationObject }}
+
+        Files:
+        {{ range $filename, $_ := .Changed.FileChanges -}}
+        - {{ $filename }}
+        {{ end -}}
+
+        Objects:
+        {{ range $resource, $changes := .Changed.Objects -}}
+        - {{ $resource.Kind }} {{ $resource.Name }}
+          Changes:
+        {{- range $_, $change := $changes }}
+            - {{ $change.OldValue }} -> {{ $change.NewValue }}
+        {{ end -}}
+        {{ end -}}
