--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -2,11 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: goapp
-  namespace: dev
+  namespace: prod
 spec:
-  targetNamespace: dev
-  install:
-    createNamespace: true
+  createNamespace: true
   interval: 1m
   chart:
     spec:
