--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -2,9 +2,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: goapp
-  namespace: prod
+  namespace: dev
 spec:
-  createNamespace: true
   interval: 1m
   chart:
     spec:
