--- a/clusters/cluster/helm-release.yaml
+++ b/clusters/cluster/helm-release.yaml
@@ -18,5 +18,4 @@ spec:
       repository: himanshu162pnt723/goapp
       tag: "20251116054055" # {"$imagepolicy": "flux-system:goapp:tag"}
     service:
-      type: NodePort
-      port: 8080
+      type: ClusterPort
