--- a/dependencies/sources/grafana.yaml
+++ b/dependencies/sources/grafana.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: ingress-nginx
+  name: grafana
   namespace: flux-system  
 spec:
   interval: 30m
